downloadable pdf and fixing notch issue on ios

--- a/src/css/components/navbar.css
+++ b/src/css/components/navbar.css
@@ -22,7 +22,7 @@
     align-items: center;
     height: 100%;
     width: 100%;
-    max-width: 1020px;
+    max-width: 1600px;
 }
 
 .menuIcon {
